--- a/css/style.css
+++ b/css/style.css
@@ -1,51 +1,99 @@
-header{
-    background-color: #ff9900;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+header {
+  background-color: #ff9900;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-footer{
-    background-color: #ff9900;
-    display: flex;
-    flex-direction: column;
+footer {
+  background-color: #ff9900;
+  display: flex;
+  flex-direction: column;
 }
 
 div {
-    border: 1px solid green;
-    margin: 5px;
-    padding: 5px;
+  border: 1px solid green;
+  padding: 5px;
 }
 
 header h1 {
-    color: aqua;
-    margin: 2px;
+  color: aqua;
+  margin: 2px;
 }
 
 .logo {
-    background-color: aqua;
-    width: 100px;
-    height: 100px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  background-color: aqua;
+  width: 100px;
+  height: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .social-media {
-    display: flex;
-    justify-content: space-around;
+  display: flex;
+  justify-content: space-around;
 }
 
 .social-media img {
-    width: 70px;
+  width: 70px;
 }
 
 .contact-info {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .contact-info p {
-    margin: 2px;
+  margin: 2px;
+}
+
+.main {
+  background-color: #ff9900;
+}
+
+.training-options {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.training-options img {
+  width: 100%;
+}
+
+@media screen and (min-width: 600px) and (max-width: 1200px) {
+  div,
+  header,
+  footer {
+    display: flex;
+    flex-direction: row;
+    text-align: center;
+    justify-content: space-between;
+  }
+  header,
+  footer {
+    padding: 0 5%;
+  }
+  h1 {
+    font-size: 50px;
+  }
+  .logo {
+  }
+  .social-media {
+    display: flex;
+    width: 50%;
+    justify-content: space-evenly;
+  }
+  .contact-info {
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-end;
+  }
 }
