--- a/css/style.css
+++ b/css/style.css
@@ -68,7 +68,7 @@ header h1 {
   width: 100%;
 }
 
-@media screen and (min-width: 600px) and (max-width: 1200px) {
+@media screen and (min-width: 600px) and (max-width: 1500px) {
   div,
   header,
   footer {
@@ -90,6 +90,10 @@ header h1 {
     display: flex;
     width: 50%;
     justify-content: space-evenly;
+  }
+  .main img {
+      width: 350px;
+      height: 350px;
   }
   .contact-info {
     display: flex;
